# defaults

./: Cargo.toml  LICENSE  README.md
examples/: enum.rs  multiple.rs  struct.rs
src/: lib.rs
tests/: 01-simple-struct.rs  02-other-derive.rs  03-conflict.rs  03-conflict.stderr  04-custom-default.rs  05-custom-default-with-fn.rs  06-cast.rs  07-invalid-attr-value-type.rs  07-invalid-attr-value-type.stderr  08-attr-empty.rs  08-attr-empty.stderr  09-non-default-field.rs  09-non-default-field.stderr  10-custom-default-struct.rs  11-invalid-expr.rs  11-invalid-expr.stderr  12-enums.rs  12-enums.stderr  13-multiple-attrs.rs  13-multiple-attrs.stderr  14-custom-default-struct-named.rs  15-enums-attr.rs  16-enums-struct-variant.rs  17-enums-struct-variant-incomplete.rs  17-enums-struct-variant-incomplete.stderr  18-enums-tuple-variant.rs  19-enums-tuple-variant-incomplete.rs  19-enums-tuple-variant-incomplete.stderr  20-enums-with-method.rs  Cargo.toml  progress.rs
tests/src/: main.rs
