[package]
name = "defaults"
version = "0.1.0"
authors = ["Singh, Gurwinder <Gurwinder.Singh@fisglobal.com>"]
edition = "2018"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = "1.0.11"
quote = "1.0.2"
proc-macro2 = "1.0.6"