[package]
name = "defaults"
description = "A better `Default` derive macro"
version = "0.1.0"
authors = ["Gurwinder Singh <vargwin@gmail.com>"]
edition = "2018"
autotests = false
license-file = "LICENSE"
homepage = "https://github.com/95th/defaults"
repository = "https://github.com/95th/defaults"
documentation = "https://docs.rs/defaults"
readme = "README.md"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
syn = { version = "1.0.11", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"